# ORB-TopstepX-PairedStops

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: design.md
src/orb_topstepx/: __init__.py  client.py  main.py  pair_manager.py  price_math.py  settings.py  ui.py
tests/: test_price_math.py
